--- a/views/how-it-works.ejs
+++ b/views/how-it-works.ejs
@@ -12,7 +12,7 @@
       background: #f2f2f2;
       display: flex;
       justify-content: center;
-      font-family: 'Geist', sans-serif;
+      font-family: 'Geist', system-ui, sans-serif;
     }
 
     .a4-page {
