--- a/views/ready-to-maximize.ejs
+++ b/views/ready-to-maximize.ejs
@@ -15,7 +15,7 @@
       display: flex;
       justify-content: center;
       padding: 20px;
-      font-family: 'Geist', sans-serif;
+      font-family: 'Geist', system-ui, sans-serif;
     }
 
     /* A4 Page */
